--- a/src/server/configs/server.conf
+++ b/src/server/configs/server.conf
@@ -8,7 +8,7 @@
   <endpoints_services>
     <!-- Enable/disable debuging of module. -->
     <debug>1</debug>
-
+<!--
     <application>
       <name>Test OPC UA Server</name>
       <uri>opcua.treww.org</uri>
@@ -28,9 +28,10 @@
 
 	  </endpoint>
     </application>
+-->
   </endpoints_services>
 
-  <opcua_protocol>
+  <opc_tcp_async>
     <!-- Enable/disable debuging of module. -->
     <debug>1</debug>
 
