--- a/Makefile.am
+++ b/Makefile.am
@@ -68,6 +68,7 @@ serverinclude_HEADERS = \
 	include/opc/ua/server/address_space.h \
 	include/opc/ua/server/opcuaserver.h \
 	include/opc/ua/server/endpoints_services.h \
+	include/opc/ua/server/opc_tcp_async.h \
 	include/opc/ua/server/tcp_server.h \
 	include/opc/ua/server/services_registry.h \
 	include/opc/ua/server/builtin_server.h
@@ -78,6 +79,7 @@ addonsinclude_HEADERS = \
 	include/opc/ua/server/addons/address_space.h \
 	include/opc/ua/server/addons/xml_ns.h \
 	include/opc/ua/server/addons/endpoints_services.h \
+	include/opc/ua/server/addons/opc_tcp_async.h \
 	include/opc/ua/server/addons/tcp_server.h \
 	include/opc/ua/server/addons/services_registry.h \
 	include/opc/ua/server/addons/builtin_server.h
@@ -89,6 +91,10 @@ libopcuaserver_la_SOURCES = \
 	src/server/endpoints_parameters.cpp \
 	src/server/endpoints_services_addon.cpp \
 	src/server/address_space_addon.h \
+	src/server/opc_tcp_async_addon.cpp \
+	src/server/opc_tcp_async.cpp \
+	src/server/opc_tcp_async_parameters.cpp \
+	src/server/opc_tcp_async_parameters.h \
 	src/server/tcp_server.cpp \
 	src/server/xml_address_space_loader.h \
 	src/server/standard_namespace_addon.cpp \
