Fixes 'make dist'

--- a/Makefile.am
+++ b/Makefile.am
@@ -95,6 +95,7 @@ libopcuaserver_la_SOURCES = \
 	src/server/opc_tcp_async_parameters.cpp \
 	src/server/opc_tcp_async_parameters.h \
 	src/server/opc_tcp_processor.cpp \
+	src/server/opc_tcp_processor.h \
 	src/server/opcua_protocol.h \
 	src/server/opcua_protocol_addon.cpp \
 	src/server/opcuaserver.cpp \
@@ -106,6 +107,7 @@ libopcuaserver_la_SOURCES = \
 	src/server/standard_namespace.cpp \
 	src/server/tcp_server.cpp \
 	src/server/tcp_server.h \
+	src/server/utils.h \
 	src/server/xml_address_space_loader.cpp \
 	src/server/xml_address_space_loader.h \
 	src/server/xml_address_space_addon.cpp \
@@ -135,9 +137,9 @@ test_addon.so: tests/server/test_addon.h tests/server/test_addon.cpp libopcuacor
 	gcc -o0 -g -Wall -std=c++0x -shared test_addon.o -o test_addon.so $(top_builddir)/.libs/libopcuacore.so
 
 test_opcuaserver_SOURCES = \
-	tests/server/builtin_server_addon.h \
-	tests/server/builtin_server.h \
 	tests/server/address_space_registry_test.h \
+	tests/server/builtin_server.h \
+	tests/server/builtin_server_addon.h \
 	tests/server/builtin_server_factory.cpp \
 	tests/server/builtin_server_impl.cpp \
 	tests/server/builtin_server_impl.h \
@@ -401,15 +403,16 @@ example_server_LDFLAGS = -ldl -lpthread -lxml2 -lboost_system
 #############################################################
 
 EXTRA_DIST = \
-  src/server/configs/main.conf \
+  src/client/configs/opc_tcp.conf \
+  src/server/configs/server.conf \
   src/server/configs/opcuaserver \
   src/server/configs/opcuaserver.conf \
-  tests/client/configs \
   tests/core/configs \
   tests/gtest \
   tests/gmock \
   tests/server/common.cpp \
   tests/server/common.h \
+  tests/server/configs \
   tests/server/test_addon.cpp \
   tests/server/test_addon.h \
   tests/server/base_node.xml \
