Add function for connecting to server by endpoint url. It is used in commandline client and in the python bindings.

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ check_PROGRAMS = $(TESTS)
 opcincludedir = $(includedir)/opc
 opcuaincludedir = $(opcincludedir)/ua
 clientincludedir = $(opcuaincludedir)/client
+servicesincludedir = $(opcuaincludedir)/services
 serverincludedir = $(opcuaincludedir)/server
 addonsincludedir = $(serverincludedir)/addons
 protocolincludedir = $(opcuaincludedir)/protocol
@@ -256,13 +257,15 @@ opcuainclude_HEADERS = \
   include/opc/ua/event.h \
   include/opc/ua/node.h \
   include/opc/ua/server.h \
+  include/opc/ua/socket_channel.h \
+  include/opc/ua/subscription.h
+
+servicesinclude_HEADERS = \
   include/opc/ua/services/attributes.h \
   include/opc/ua/services/endpoints.h \
   include/opc/ua/services/node_management.h \
   include/opc/ua/services/subscriptions.h \
-  include/opc/ua/services/view.h \
-  include/opc/ua/socket_channel.h \
-  include/opc/ua/subscription.h
+  include/opc/ua/services/view.h
 
 commondir = $(opcincludedir)/common
 common_HEADERS = \
