build fix with after addin async client in the main trunk of freeopcua. Makefile in the tests folder runs unittests because it require building of test module test_opcua.so. Functional tests are started from top directory because it uses real python mopdule opcua.so

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,12 +9,17 @@ EXTRA_DIST = \
   setup.py
 
 opcua_paths = OPCUA_SERVER_PATH=$(OPCUA_SERVER_PATH)
+opcua_paths = OPCUA_SERVER_PATH=$(OPCUA_SERVER_PATH)
+libraries_path =$(OPCUA_SERVER_PATH)/lib
+TEST_VARS = $(opcua_paths) LD_LIBRARY_PATH=$(libraries_path) PYTHONPATH=$(shell find ./build -name \*.so -exec dirname {} + )
+
 
 all:
 	$(opcua_paths) python setup.py build
 
 check:
 	$(opcua_paths) $(MAKE) -C tests check
+	$(TEST_VARS) python ./tests/test_highlevel.py
 	
 clean:
 	$(MAKE) -C tests clean
