--- a/src/server/configs/server.conf
+++ b/src/server/configs/server.conf
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <config>
+ 
+  <async>
+  	<threads>4</threads>
+  </async>
 
   <address_space_registry>
   	<debug>1</debug>  
