--- a/configure.ac
+++ b/configure.ac
@@ -8,12 +8,11 @@
 # $Date: $
 # $Revision: $
 
-AC_INIT
+AC_INIT([opcuaserver], [0.1.2], [rykovanov.as@gmail.com])
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_SRCDIR([Makefile.am])
-AM_INIT_AUTOMAKE([opcuaserver], [0.1.2], [rykovanov.as@gmail.com])
 AC_CONFIG_MACRO_DIR([m4])
-
+AM_INIT_AUTOMAKE
 
 AC_ARG_WITH([opcuaserver],
             [AS_HELP_STRING([--with-opcuaserver=DIR], [defines path to the root directory of installed opcua-server.])],
