Using SetServerURI which replaced SetURI. Take path to opcua includes from prefix path.

--- a/configure.ac
+++ b/configure.ac
@@ -21,6 +21,8 @@ AC_ARG_WITH([opcuaserver],
               AC_MSG_NOTICE([opcuaserver path: $with_opcuaserver])
             ],
             [
+              AC_SUBST([OPCUA_SERVER_PATH], ["$prefix"])
+              AC_MSG_NOTICE([opcuaserver path: $prefix])
             ])
 
 
