Unified classes creation with using addons.

--- a/tests/server/configs/test_addon.conf
+++ b/tests/server/configs/test_addon.conf
@@ -8,6 +8,8 @@
       <parameters>
         <hello>world</hello>
       </parameters>
+      <dependencies>
+      </dependencies>
     </module>
 
   </modules>
