Fixed subscriptions. Created class of threadsafe PeriodicTimer. Updated creation of common addons. added to the tests creating subscription server because of failing some of them.

--- a/src/server/configs/server.conf
+++ b/src/server/configs/server.conf
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <config>
- 
   <async>
   	<threads>4</threads>
   </async>
@@ -59,4 +58,9 @@
 	  </endpoint>
     </application>
   </opcua_protocol>
+
+  <server_object>
+    <debug>1</debug>
+  </server_object>
+
 </config>
