- split module file into smaller chunks. on-going, here the enums - cleanup distutil - update .gitignore - update test in python 2.7.8, threading.Condition do not return a value, remove test.

--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,24 @@
 *.so
 
 # Packages
+autom4te.cache/
+bin
+build
+config.log
+config.status
+develop-eggs
+dist
 *.egg
 *.egg-info
-dist
-build
 eggs
-parts
-bin
-var
-sdist
-develop-eggs
 .installed.cfg
 lib
 lib64
+Makefile
+parts
 __pycache__
+sdist
+var
 
 # Installer logs
 pip-log.txt
